--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
         </div>
     </div>
 
-    <!-- START OF USER-REQUESTED SCRIPT BLOCK -->
     <script>
         // Define the IMO number for the vessel (Rocinante)
         const IMO_NUMBER = '1009699';
@@ -97,7 +96,14 @@
             }
         }, 10000); // 10 second timeout check
     </script>
-    <!-- END OF USER-REQUESTED SCRIPT BLOCK -->
+
+
+<footer class="bg-neutral-primary-soft rounded-base shadow-xs border border-default m-4">
+    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+      <span class="text-sm text-body sm:text-center">This page is vibe coded by Gemini.
+    </span>
+    </div>
+</footer>
 
 </body>
 </html>
